Add Unit testing for NewsViewmodel